--- a/svr/connect/Dockerfile
+++ b/svr/connect/Dockerfile
@@ -8,10 +8,10 @@ ENV GO111MODULE=on \
 
 WORKDIR /MeiChat
 
-COPY bin/connect_service_linux ./connect/connect_service_linux
+COPY bin/connect_linux ./connect/connect_linux
 
 VOLUME /MeiChat/conf
 
 EXPOSE 8080
 
-ENTRYPOINT ["/MeiChat/connect/connect_service_linux"]
+ENTRYPOINT ["/MeiChat/connect/connect_linux"]
