--- a/core/Makefile
+++ b/core/Makefile
@@ -11,7 +11,7 @@ CXXFLAGS := $(CFLAGS)
 
 LINK    = -lpthread
 
-INC	= -I. -I./Common -I./Net -I./Net/Poller -I./TcpServer
+INC	= -I. -I./Common -I./Net -I./Net/Poller -I./TcpServer -I../libs/hiredis -I../libs/google
 SRCS = $(wildcard Common/*.cpp) $(wildcard Net/*.cpp) $(wildcard Net/Poller/*.cpp) $(wildcard TcpServer/*.cpp)
 
 
