--- a/core/Makefile
+++ b/core/Makefile
@@ -9,7 +9,7 @@ CFLAGS += -DMEMCHECK
 endif
 CXXFLAGS := $(CFLAGS)
 
-LINK    = -lpthread
+LINK = -lpthread ../libs/hiredis/-lhiredis
 
 INC	= -I. -I./Common -I./Net -I./Net/Poller -I./TcpServer -I../libs/hiredis -I../libs/google
 SRCS = $(wildcard Common/*.cpp) $(wildcard Net/*.cpp) $(wildcard Net/Poller/*.cpp) $(wildcard TcpServer/*.cpp)
