--- a/proto/Makefile
+++ b/proto/Makefile
@@ -5,26 +5,19 @@ PROJECT_DIR := ..
 LIB_DIR 	:= $(PROJECT_DIR)/libs
 TOOL_PROTOC   := /usr/local/bin/protoc
 
-LIB = $(LIB_DIR)/libproto.a
+LIB = $(LIB_DIR)/libprotobuf.a
 
 CXXFLAGS += -std=c++2a -Wall -g -pipe -rdynamic -fno-strict-aliasing -Wno-unused-function -Wno-sign-compare -fpermissive
 
-PB_OBJ = \
-		$(DEP_DIR)/poker_common.o	\
-		$(DEP_DIR)/poker_data.o	\
-		$(DEP_DIR)/poker_config.o \
-		$(DEP_DIR)/poker_msg_basic.o	\
-		$(DEP_DIR)/poker_msg_cs.o	\
-		$(DEP_DIR)/poker_msg_ss.o	\
-		$(DEP_DIR)/poker_msg_log.o	\
-		$(DEP_DIR)/poker_msg.o	\
+SRC = $(wildcard *.proto)
+PB_OBJ = $(DEP_DIR)/$(patsubst %.proto,%.o,$(SRC))
 
-INC_FLAGS =  -I$(PROJECT_DIR)/proto \
+INC_FLAGS =  -I$(PROJECT_DIR)/proto
 
-$(LIB) :  $(PB_OBJ) 
+$(LIB) : $(PB_OBJ) 
 	ar rcs $@ $^
 	
-$(PB_OBJ) :$(DEP_DIR)/%.o : %.proto
+$(PB_OBJ) : $(DEP_DIR)/%.o : %.proto
 	$(TOOL_PROTOC) $< --cpp_out=./
 	g++ $(CXXFLAGS) $(INC_FLAGS) -c -o $@ $(patsubst %.proto, %.pb.cc, $<)
 
@@ -32,5 +25,3 @@ clean:
 	$(RM) $(LIB) $(DEP_DIR) -rf 
 
 .PHONY: protbuf
-
-# vim:ts=4:sw=4:ft=make:
