--- a/proto/Makefile
+++ b/proto/Makefile
@@ -14,14 +14,14 @@ PB_OBJ = $(DEP_DIR)/$(patsubst %.proto,%.o,$(SRC))
 
 INC_FLAGS = -I$(PROJECT_DIR)/proto
 
-$(LIB) : $(PB_OBJ) 
+$(LIB) : $(PB_OBJ)
 	ar rcs $@ $^
 	
 $(PB_OBJ) : $(SRC)
 	$(TOOL_PROTOC) $^ --cpp_out=./
-	g++ $(CXXFLAGS) $(INC_FLAGS) -c -o $@ $(patsubst %.proto, %.pb.cc, $<)
+	g++ $(CXXFLAGS) $(INC_FLAGS) -c -o $@ $(patsubst %.proto, %.pb.cc, $^)
 
 clean:
-	$(RM) $(LIB) $(DEP_DIR) -rf
+	$(RM) $(LIB) $(DEP_DIR) ./*.h ./*.cc ./*.o -rf
 
 .PHONY: protbuf
