--- a/svr/chatServer/src/Makefile
+++ b/svr/chatServer/src/Makefile
@@ -3,6 +3,7 @@ CXXFLAGS += -std=c++11 -Wall -g -pipe -rdynamic -fno-strict-aliasing -Wno-unused
 INC += -I. -I../../../core -I../../../core/Common -I../../../core/Net -I../../../core/Net/Poller -I../../../core/TcpServer
 INC += -I../../../proto -I../../../libs
 
+LIB = -lpthread
 LIB += -L/usr/local/lib/libprotoc.a ../../../libs/libreactor.a ../../../libs/libprotobuf.a
 
 TARGET = chatServer
