--- a/core/Makefile
+++ b/core/Makefile
@@ -13,8 +13,8 @@ CXXFLAGS += $(CFLAGS)
 
 LINK = -lpthread -lhiredis
 
-INC	= -I. -I./Common -I./Net -I./Net/Poller -I./TcpServer -I../libs/hiredis -I../libs/google
-SRCS = $(wildcard Common/*.cpp) $(wildcard Net/*.cpp) $(wildcard Net/Poller/*.cpp) $(wildcard TcpServer/*.cpp)
+INC	= -I. -I./Common -I./Net -I./Net/Poller -I../libs/hiredis -I../libs/google
+SRCS = $(wildcard ./*.cpp) $(wildcard Common/*.cpp) $(wildcard Net/*.cpp) $(wildcard Net/Poller/*.cpp)
 
 
 COMPILE_LIB_HOME = ../libs/
