--- a/svr/chatServer/src/Makefile
+++ b/svr/chatServer/src/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS += -std=c++2a -Wall -g -pipe -rdynamic -fno-strict-aliasing -Wno-unused
 INC += -I. -I../../../core -I../../../proto -I../../../libs \
 	-I./app -I./common -I./common/codec -I./common/redisCliPool -I./common/session -I./processer
 
-LIB += -L/usr/local/lib/libprotoc.a ../../../libs/libreactor.a ../../../libs/libprotobuf.a
+LIB += -L../../../libs ../../../libs/libreactor.a ../../../libs/libprotobuf.a /usr/local/lib/libprotoc.a
 
 TARGET = chatServer
 
